add user view one order
