# internal/dto/order_dto.go
@@ -70,3 +70,37 @@ type UserOrdersResponse struct {
 
 	Total int64 `json:"total"`
 }
+
+type UserOrderDetailsItemResponse struct {
+	ID uint `json:"id"`
+
+	BookID uint `json:"book_id"`
+
+	Quantity int `json:"quantity"`
+
+	Price float64 `json:"price"`
+
+	Title string `json:"title"`
+
+	Author string `json:"author"`
+
+	Publisher string `json:"publisher"`
+
+	ImagePath string `json:"image_path"`
+}
+
+type UserOrderDetailsResponse struct {
+	ID uint `json:"id"`
+
+	Status string `json:"status"`
+
+	Address string `json:"address"`
+
+	TotalPrice float64 `json:"total_price"`
+
+	CreatedAt time.Time `json:"created_at"`
+
+	UpdatedAt time.Time `json:"updated_at"`
+
+	Items []UserOrderDetailsItemResponse `json:"items"`
+}
